# uv-workspace-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
notes/: basic_uv_operations.md  build_notes.md
src/my_app/: app.py  main.py
src/my_cli/: main.py
tests/: test_cli.py
